V4659: Changes according to Rev J P&Id

--- a/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P508.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L0/Pages/L0_P508.xaml
@@ -138,7 +138,7 @@
         <Labels:Pipe Width="144" Color="Water" StatusComponent="L0+508-01-MA1" Canvas.Left="283" Canvas.Top="663" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="131" Color="Water" StatusComponent="L0+508-01-MA1" Canvas.Left="156" Canvas.Top="624" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="145" Color="Water" StatusComponent="L0+508-01-MA1" VisibilityComponent="" Canvas.Left="142" Canvas.Top="704" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="84" Color="Water" StatusComponent="L0+508-01-MA1" Canvas.Left="243" Canvas.Top="664" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Width="244" Color="Water" StatusComponent="L0+508-01-MA1" Canvas.Left="163" Canvas.Top="584" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -148,6 +148,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Labels:Pipe Width="131" Color="Water" StatusComponent="L0+508-01-MA1" Canvas.Left="156" Canvas.Top="463" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="145" Color="Water" StatusComponent="L0+508-01-MA1" VisibilityComponent="" Canvas.Left="142" Canvas.Top="543" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:CV_Valve_001 Color="Water" RenderTransformOrigin="0.5,0.5" Height="54" Width="58" Canvas.Left="496" Canvas.Top="487" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
@@ -177,13 +179,15 @@
         <Machines:V01_BBF_DoubleBag Canvas.Left="1073" Canvas.Top="643" Height="166" Width="286" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1133" Canvas.Top="522" Height="94" Width="164" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L0+423-01-MA1" JumpToLabel="L1+440-01-MA1" Canvas.Left="783" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="L1+508-01-MA1" JumpToLabel="L2+510-RINSE" Canvas.Left="76" Canvas.Top="672" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
-        <Labels:JumpLabel JumpFromLabel="L1+508-01-MA1" JumpToLabel="L1+510-RINSE" Canvas.Left="76" Canvas.Top="591" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
+        <Labels:JumpLabel JumpFromLabel="L0+508-01-MA1" JumpToLabel="L2+440-01-MA1" Canvas.Left="76" Canvas.Top="592" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
+        <Labels:JumpLabel JumpFromLabel="L0+508-01-MA1" JumpToLabel="L1+440-01-MA1" Canvas.Left="76" Canvas.Top="431" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="L0+421-01-MA1" JumpToLabel="L2+420-DISCHARGE" Canvas.Left="293" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L0+421-01-MA1" JumpToLabel="L1+420-DISCHARGE" Canvas.Left="337" Canvas.Top="87" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L0+423-01-MA1" JumpToLabel="L2+440-01-MA1" Canvas.Left="739" Canvas.Top="118" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L0+997-BAGS" JumpToLabel="L2+447-21-CV1" Canvas.Left="972" Canvas.Top="446" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="L0+997-BAGS" JumpToLabel="L1+447-21-CV1" Canvas.Left="1003" Canvas.Top="369" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="L0+508-01-MA1" JumpToLabel="L2+510-RINSE" Canvas.Left="76" Canvas.Top="672" Direction="Left" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="L0+508-01-MA1" JumpToLabel="L1+510-RINSE" Canvas.Left="76" Canvas.Top="510" Direction="Left" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="L0+997-BAGS" DetailsPageName="L0_D997" Canvas.Left="1172" Canvas.Top="669" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="L0+508-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="301" Canvas.Top="695" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L0+508-41-LT1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="440" Canvas.Top="618" HorizontalAlignment="Center" VerticalAlignment="Top"/>
