--- a/Prevu.Synoptics.V4659_Steinbais/OverallView.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/OverallView.xaml
@@ -14,6 +14,114 @@
              d:Background="{DynamicResource MaterialDesignPaper}" >
 
     <Canvas Height="4273" Width="8976">
+        <Labels:Pipe Canvas.Left="6061" Canvas.Top="2158" Width="507" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="6112" Canvas.Top="2238" Width="456" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="6052" Canvas.Top="1693" Width="64" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="6064" Canvas.Top="1978" Width="40" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5912" Canvas.Top="1476" Width="344" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5981" Canvas.Top="1841" Width="206" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="5871" Canvas.Top="1080" Width="426" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="6082" Canvas.Top="1997" Width="25" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4861" Canvas.Top="2158" Width="1154" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4776" Canvas.Top="3282" Width="174" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="4742" Canvas.Top="3060" Width="242" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="4491" Canvas.Top="2529" Width="744" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="6029" Canvas.Top="2158" Width="18" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4858" Canvas.Top="2923" Width="10" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="4861" Canvas.Top="869" Width="1225" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4812" Canvas.Top="918" Width="102" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+
+
         <Labels:Pipe Canvas.Left="5759" Canvas.Top="2865" Width="648" Color="ByProduct" StatusComponent="L2+446-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="L2+447-21-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -37,7 +145,7 @@
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="7241" Canvas.Top="2012" Width="223" Color="ByProduct" StatusComponent="L2+446-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L2+447-21-CV1" VisibilitySignal="LS1"/>
         <Labels:Pipe Canvas.Left="6121" Canvas.Top="2371" Width="1124" Color="ByProduct" StatusComponent="L2+446-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L2+447-21-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Canvas.Left="6082" Canvas.Top="1693" Width="64" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="6082" Canvas.Top="1693" Width="64" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -479,7 +587,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="4212" Canvas.Top="3480" Width="305" Color="Water" StatusComponent="L2+430-01-MA4" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Canvas.Left="6028" Canvas.Top="2074" Width="172" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="6054" Canvas.Top="2018" Width="120" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -489,7 +597,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="6112" Canvas.Top="2158" Width="456" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="6121" Canvas.Top="1997" Width="447" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="6112" Canvas.Top="395" Width="89" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5920" Canvas.Top="587" Width="388" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -502,8 +610,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="6112" Canvas.Top="2795" Width="102" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="6112" Canvas.Top="2238" Width="456" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="5982" Canvas.Top="2368" Width="264" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="6112" Canvas.Top="2077" Width="456" Color="Water" StatusComponent="L0+508-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="5982" Canvas.Top="2368" Width="264" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -550,7 +658,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="5942" Canvas.Top="1476" Width="344" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="5942" Canvas.Top="1476" Width="344" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -570,8 +678,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="6051" Canvas.Top="1981" Width="1194" Color="ByProduct" StatusComponent="L2+440-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="5793" Canvas.Top="2239" Width="520" Color="ByProduct" StatusComponent="L2+440-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="6051" Canvas.Top="1951" Width="1194" Color="ByProduct" StatusComponent="L2+440-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="5778" Canvas.Top="2224" Width="550" Color="ByProduct" StatusComponent="L2+440-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -581,7 +689,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="5996" Canvas.Top="1856" Width="236" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="6011" Canvas.Top="1841" Width="206" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -591,7 +699,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="7096" Canvas.Top="1836" Width="294" Color="ByProduct" StatusComponent="L2+440-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="7096" Canvas.Top="1806" Width="294" Color="ByProduct" StatusComponent="L2+440-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -670,7 +778,7 @@
         <Labels:Pipe Canvas.Left="6514" Canvas.Top="1654" Width="309" Color="ByProduct" StatusComponent="L1+420-23-CV1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L1+420-23-CV1" VisibilitySignal="LS1"/>
         <Labels:Pipe Canvas.Left="6514" Canvas.Top="1731" Width="269" Color="ByProduct" StatusComponent="L2+420-23-CV1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L2+420-23-CV1" VisibilitySignal="LS1"/>
         <Labels:Pipe Canvas.Left="4761" Canvas.Top="788" Width="1747" Color="ByProduct" StatusComponent="L1+446-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="L1+447-21-CV1" VisibilitySignal="LS1"/>
-        <Labels:Pipe Canvas.Left="5865" Canvas.Top="1044" Width="498" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="5865" Canvas.Top="1044" Width="498" Color="Water" StatusComponent="L0+508-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
