V4978: New Project - CEDO

--- a/Prevu.Synoptics.V4896_CPR/WaterView.xaml
+++ b/Prevu.Synoptics.V4896_CPR/WaterView.xaml
@@ -238,7 +238,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="346" StatusComponent="470-01-MA1" Canvas.Left="-110" Canvas.Top="214" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top" VisibilityComponent="470-25-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Color="Water" Width="346" StatusComponent="470-01-MA1" Canvas.Left="-108" Canvas.Top="214" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="470-25-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
