--- a/Prevu.Synoptics.V4228-RES/Pages/P430.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P430.xaml
@@ -350,5 +350,6 @@
     <Labels:DeviceLabel ComponentName="431-22-CV1" Canvas.Left="852" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="433-22-CV1" Canvas.Left="888" Canvas.Top="359" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="433-21-CV1" Canvas.Left="888" Canvas.Top="278" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="455-MATERIAL" Canvas.Left="995" Canvas.Top="117" HorizontalAlignment="Left" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
